--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -50,6 +50,19 @@ body {
   .content {
     flex: 2;
     overflow-y: auto;
+    padding: 15px;
+
+    .filterContainer {
+      margin-bottom: 35px;
+      > input {
+        width: 97%;
+        height: 22px;
+        padding: 0.5rem;
+        border-radius: 0.3rem;
+        border: 1px solid rgba(34, 36, 38, 0.1490196078);
+        background-color: #ffffff;
+      }
+    }
 
     .imagesContainer {
       display: grid;
