--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -30,7 +30,7 @@ body {
 
   .searchButton {
     width: 100%;
-    height: 100%;
+    height: 41.6px;
     background: #000000;
     color: #ffffff;
     border: 1px solid #22242626;
@@ -41,11 +41,16 @@ body {
   .buffer {
     flex: 1;
   }
+
+  @media (max-width: 1224px) {
+    flex-direction: column;
+    height: 210px;
+  }
 }
 
 .main {
   display: flex;
-  height: 100vh;
+  height: 93vh;
 
   .content {
     flex: 2;
@@ -54,6 +59,10 @@ body {
 
     .filterContainer {
       margin-bottom: 35px;
+      position: sticky;
+      top: 0;
+      z-index: 1;
+
       > input {
         width: 97%;
         height: 22px;
@@ -104,5 +113,17 @@ body {
   .sidebar {
     flex: 2;
     height: 100%;
+
+    > div > div {
+      border-radius: 5px;
+
+      @media (max-width: 1224px) {
+        border-radius: 0;
+      }
+    }
+  }
+
+  @media (max-width: 1224px) {
+    flex-direction: column-reverse;
   }
 }
