--- a/src/component/Dropdown.module.scss
+++ b/src/component/Dropdown.module.scss
@@ -10,7 +10,7 @@
     overflow-y: auto;
 
     .label {
-      color: #22242626;
+      color: #222222;
     }
   }
 
@@ -21,7 +21,7 @@
     overflow-y: auto;
     position: relative;
     background-color: #ffffff;
-    z-index: 1;
+    z-index: 2;
 
     > .item {
       height: 2em;
