--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,13 +8,30 @@ body {
   background-color: #ffffff;
   padding: 0.5rem;
   box-shadow: 0 0 5px black;
-  height: 50px;
-  z-index: 1;
+  height: 62px;
+
+  .expandMenuToggle {
+    display: none;
+
+    @media (max-width: 1224px) {
+      display: inline;
+    }
+
+    .arrowDown,
+    .arrowUp {
+      height: 17px;
+      width: 17px;
+    }
+  }
+
+  .appName {
+    margin-right: 10px;
+  }
 
   .logo {
     font-weight: 800;
-    width: 160px;
-    padding: 12px;
+    width: 200px;
+    padding: 23px;
   }
 
   .brandsDropdown,
@@ -30,12 +47,18 @@ body {
 
   .searchButton {
     width: 100%;
-    height: 41.6px;
+    min-height: 53px;
     background: #000000;
     color: #ffffff;
     border: 1px solid #22242626;
     border-radius: 0.3rem;
     cursor: pointer;
+  }
+
+  .searchButton.disabled {
+    background-color: #f5f5f5;
+    color: #bbbabb;
+    cursor: no-drop;
   }
 
   .buffer {
@@ -44,17 +67,19 @@ body {
 
   @media (max-width: 1224px) {
     flex-direction: column;
-    height: 210px;
+    padding-bottom: 14px;
+    height: 100%;
   }
 }
 
 .main {
   display: flex;
-  height: 93vh;
+  height: 92vh;
 
   .content {
     flex: 2;
     overflow-y: auto;
+    overflow-x: hidden;
     padding: 15px;
 
     .filterContainer {
@@ -76,6 +101,16 @@ body {
     .imagesContainer {
       display: grid;
       grid-template-columns: auto auto auto;
+
+      .noSearchResult {
+        text-align: center;
+        grid-column: span 3;
+
+        .image {
+          width: 100px;
+          height: 100px;
+        }
+      }
 
       .imageitem {
         padding: 20px;
@@ -112,10 +147,11 @@ body {
 
   .sidebar {
     flex: 2;
-    height: 100%;
+    margin: 10px;
 
     > div > div {
       border-radius: 5px;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 
       @media (max-width: 1224px) {
         border-radius: 0;
