--- a/src/component/Dropdown.module.scss
+++ b/src/component/Dropdown.module.scss
@@ -1,17 +1,35 @@
 .dropdown {
   .badgeBox {
     border: 1px solid #22242626;
+    background-color: #ffffff;
     min-height: 1.5em;
-    padding: 0.5rem;
+    padding: 18px 10px 10px 10px;
     border-radius: 0.3rem;
     cursor: pointer;
+    height: 22px;
+    overflow-y: auto;
+
+    .label {
+      color: #222222;
+    }
+  }
+
+  .badgeBox.disabled {
+    background-color: #f5f5f5;
+    cursor: no-drop;
+    > span {
+      color: #bbbabb;
+    }
   }
 
   .menu {
     border-radius: 0.3em;
     border: 1px solid #22242626;
-    max-height: 8em;
-    overflow-y: scroll;
+    height: 150px;
+    overflow-y: auto;
+    position: relative;
+    background-color: #ffffff;
+    z-index: 2;
 
     > .item {
       height: 2em;
@@ -22,19 +40,5 @@
     > .item:hover {
       background-color: #e8e8e8;
     }
-  }
-}
-
-.badge {
-  background-color: #e8e8e8;
-  border-radius: 0.2em;
-  color: #00000099;
-  padding: 0.1em 0.3em 0.1em 0.3em;
-  margin: 0 0.5em 0.1em 0;
-  display: inline-block;
-
-  .remove {
-    font-size: 0.8em;
-    cursor: pointer;
   }
 }
